--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-light acme-nav">
   <div class="container">
-    <a routerLink="/" >Acme Bank</a>
+    <a routerLink="/" class="acme-header">Acme Bank</a>
   </div>
 </nav>
